[gd_scene load_steps=19 format=3 uid="uid://mlucpjxt2w1o"]

[ext_resource type="Script" path="res://Scripts/mainscene.gd" id="1_by6q5"]
[ext_resource type="Texture2D" uid="uid://dhoyvexqd0i87" path="res://assets/trexskin-11.png" id="1_db7xh"]
[ext_resource type="Texture2D" uid="uid://e071rml6dny" path="res://assets/skybox.png" id="2_2wkb8"]
[ext_resource type="ArrayMesh" uid="uid://78crlivwa817" path="res://assets/11078_TRex_Head_V3.obj" id="2_moe4l"]
[ext_resource type="Texture2D" uid="uid://buv8hddr21j6c" path="res://assets/trexskin-10.png" id="3_t82go"]
[ext_resource type="Texture2D" uid="uid://csubpjefnktns" path="res://assets/HUD.png" id="6_203ip"]

[sub_resource type="PanoramaSkyMaterial" id="PanoramaSkyMaterial_mn0ul"]
panorama = ExtResource("2_2wkb8")

[sub_resource type="Sky" id="Sky_itbag"]
sky_material = SubResource("PanoramaSkyMaterial_mn0ul")

[sub_resource type="Environment" id="Environment_w11ja"]
background_mode = 2
sky = SubResource("Sky_itbag")

[sub_resource type="BoxShape3D" id="BoxShape3D_gtxb1"]
size = Vector3(3.90417, 7.13, 10.8166)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_sfte8"]
albedo_texture = ExtResource("3_t82go")

[sub_resource type="SphereShape3D" id="SphereShape3D_b52eg"]
radius = 6.076

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_kbppp"]
albedo_texture = ExtResource("1_db7xh")
metallic = 0.8
roughness = 0.8

[sub_resource type="LabelSettings" id="LabelSettings_fm133"]
font_size = 32

[sub_resource type="Theme" id="Theme_5kqyp"]
default_font_size = 40

[sub_resource type="Theme" id="Theme_1op4d"]
default_font_size = 40

[sub_resource type="Theme" id="Theme_ulh2w"]
default_font_size = 40

[sub_resource type="LabelSettings" id="LabelSettings_tq5xt"]
font_size = 48
font_color = Color(1, 0.266667, 0.396078, 1)

[node name="MainScene" type="Node3D"]
script = ExtResource("1_by6q5")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_w11ja")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(0.704413, 0.330644, -0.628074, 0.0906659, 0.835709, 0.541637, 0.703976, -0.438481, 0.558706, -17.5276, 15.9165, 13.9294)

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="Camera3D"]
transform = Transform3D(1, -2.68221e-07, -2.98023e-08, 3.57628e-07, 1, -1.63913e-07, 2.98023e-08, 2.08616e-07, 1, 5.22388, 13.4352, -42.415)

[node name="ChildPlanet" type="CustomGravity" parent="."]
gravity_strength = 10.0
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 48.359, 15.7404, 19.6991)
gravity_scale = 0.0

[node name="CollisionShape3D" type="CollisionShape3D" parent="ChildPlanet"]
transform = Transform3D(1, 7.89555e-11, 1.81899e-12, -7.89555e-11, 1, 4.65661e-10, -1.81899e-12, -4.65661e-10, 1, 0, 0, 0)
shape = SubResource("BoxShape3D_gtxb1")

[node name="model" type="MeshInstance3D" parent="ChildPlanet/CollisionShape3D"]
transform = Transform3D(0.1, 2.27374e-13, -4.27676e-11, 8.39329e-13, -4.36557e-09, 0.1, -6.82121e-13, -0.1, -4.5402e-09, -2.10555, 0, -2.28992)
material_override = SubResource("StandardMaterial3D_sfte8")
mesh = ExtResource("2_moe4l")
skeleton = NodePath("")

[node name="ParentPlanet" type="CustomGravity" parent="."]
transform = Transform3D(1, -3.60013e-14, 1.01481e-16, 3.60013e-14, 1, 0, -1.01481e-16, 3.65346e-30, 1, 0, 0, 0)
mass = 1000.0
gravity_scale = 0.0

[node name="Parent_CollisionShape" type="CollisionShape3D" parent="ParentPlanet"]
transform = Transform3D(0.999998, -0.00200713, 9.0948e-13, 0.0020071, 0.999982, 0.00565484, -1.135e-05, -0.00565482, 0.999984, 5.27119e-14, 1.46677, 0.924958)
shape = SubResource("SphereShape3D_b52eg")

[node name="model" type="MeshInstance3D" parent="ParentPlanet"]
transform = Transform3D(0.0999998, 1.44826e-13, -0.000200713, 0.00020071, -0.000565488, 0.0999982, -1.13501e-06, -0.0999984, -0.000565487, -0.121112, 0.410356, -2.07658)
material_override = SubResource("StandardMaterial3D_kbppp")
mesh = ExtResource("2_moe4l")
skeleton = NodePath("../Parent_CollisionShape")

[node name="HUD" type="Node2D" parent="."]
scale = Vector2(0.8, 0.8)

[node name="HUDSprite" type="Sprite2D" parent="HUD"]
position = Vector2(331.25, 220.75)
scale = Vector2(0.498865, 0.498865)
texture = ExtResource("6_203ip")

[node name="Strength Text" type="Label" parent="HUD"]
offset_left = 30.0
offset_top = 24.0
offset_right = 300.0
offset_bottom = 69.0
text = "Gravity Strength: "
label_settings = SubResource("LabelSettings_fm133")

[node name="Center Text" type="Label" parent="HUD"]
offset_left = 31.0
offset_top = 113.0
offset_right = 311.0
offset_bottom = 158.0
text = "Center of Gravity: "
label_settings = SubResource("LabelSettings_fm133")

[node name="XYZ" type="Label" parent="HUD/Center Text"]
layout_mode = 0
offset_left = 85.25
offset_top = 34.5
offset_right = 525.25
offset_bottom = 79.5
text = "X                      Y                       Z"
label_settings = SubResource("LabelSettings_fm133")

[node name="Mode Text" type="Label" parent="HUD"]
offset_left = 41.25
offset_top = 290.0
offset_right = 321.25
offset_bottom = 335.0
text = "Gravity Mode: "
label_settings = SubResource("LabelSettings_fm133")

[node name="Gravity_Strength_Slider" type="HSlider" parent="HUD"]
offset_left = 40.0
offset_top = 74.0
offset_right = 627.0
offset_bottom = 106.0
max_value = 25.0

[node name="Center_Slider_Z" type="SpinBox" parent="HUD"]
offset_left = 464.0
offset_top = 199.5
offset_right = 636.0
offset_bottom = 262.5
theme = SubResource("Theme_5kqyp")
min_value = -50.0
max_value = 50.0
alignment = 1

[node name="Center_Slider_Y" type="SpinBox" parent="HUD"]
offset_left = 254.0
offset_top = 198.0
offset_right = 420.0
offset_bottom = 256.0
theme = SubResource("Theme_1op4d")
min_value = -50.0
max_value = 50.0
alignment = 1

[node name="Center_Slider_X" type="SpinBox" parent="HUD"]
layout_direction = 1
offset_left = 46.0
offset_top = 200.0
offset_right = 214.0
offset_bottom = 250.0
size_flags_horizontal = 0
tooltip_text = "X"
theme = SubResource("Theme_ulh2w")
min_value = -50.0
max_value = 50.0
alignment = 1
update_on_text_changed = true
custom_arrow_step = 9666.67

[node name="Mode_Slider" type="SpinBox" parent="HUD"]
layout_direction = 1
offset_left = 277.5
offset_top = 283.75
offset_right = 449.5
offset_bottom = 346.75
size_flags_horizontal = 0
tooltip_text = "X"
theme = SubResource("Theme_ulh2w")
max_value = 2.0
alignment = 1
update_on_text_changed = true
custom_arrow_step = 9666.67

[node name="r to restart" type="Label" parent="HUD"]
unique_name_in_owner = true
offset_left = 196.25
offset_top = 361.25
offset_right = 476.25
offset_bottom = 428.25
text = "R to Restart"
label_settings = SubResource("LabelSettings_tq5xt")
horizontal_alignment = 1

[connection signal="value_changed" from="HUD/Gravity_Strength_Slider" to="." method="_on_gravity_strength_slider_value_changed"]
[connection signal="value_changed" from="HUD/Center_Slider_Z" to="." method="_on_center_slider_z_value_changed"]
[connection signal="value_changed" from="HUD/Center_Slider_Y" to="." method="_on_center_slider_y_value_changed"]
[connection signal="value_changed" from="HUD/Center_Slider_X" to="." method="_on_center_slider_x_value_changed"]
[connection signal="value_changed" from="HUD/Mode_Slider" to="." method="_on_mode_slider_value_changed"]
